# superagent

./: .env_example  .gitignore  config_example.py  pyproject.toml  superagent.py  util_middlewares.py  util_models.py  util_prompts.py  util_pub_func.py  util_skills.py  util_tools.py  web_api.py
skills/: __init__.py
skills/get-current-datetime/: SKILL.md
skills/get-current-datetime/scripts/: get_current_datetime.py
skills/get-current-weather/: SKILL.md
skills/get-current-weather/scripts/: get_current_weather.py
skills/get-local-file-content/: SKILL.md
skills/get-local-file-content/scripts/: get_local_file_content.py
skills/get-video-text-content/: SKILL.md
skills/get-video-text-content/scripts/: get_video_text_content.py
skills/web-search/: SKILL.md
skills/web-search/scripts/: web_search.py
