[project]
name = "superagent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.9.3",
    "dotenv>=0.9.9",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "markitdown[all]>=0.1.4",
    "readability-lxml>=0.8.4.1",
    "rich>=14.2.0",
    "toon-format",
    "zendriver>=0.15.2",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }
