[project]
name = "superagent"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.9.3",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.124.4",
    "faster-whisper>=1.2.1",
    "langchain>=1.1.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.1.14",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.4",
    "langid>=1.1.6",
    "markitdown[all]>=0.1.4",
    "readability-lxml>=0.8.4.1",
    "rich>=14.2.0",
    "toon-format",
    "uvicorn>=0.38.0",
    "yt-dlp[curl-cffi,default]>=2025.10.22",
    "zendriver>=0.15.2",
]

[tool.uv.sources]
toon-format = { git = "https://github.com/toon-format/toon-python.git" }

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple/"
default = true
